[package]
name = "herman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7.4"
dapt = "0.1.2"
serde = "1.0.202"
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["full"] }
